--- a/server/package.json
+++ b/server/package.json
@@ -1,32 +1,33 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "A web based application that utilizes ML to help farmers in predicting Rice crop diseases.",
-  "main": "server.js",
+  "description": "A backend code for project to detect crop diseases",
+  "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
-    "build": "tsc"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node index.ts",
+    "dev": "nodemon index.ts"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Steve Mwangi",
+  "license": "MIT",
   "dependencies": {
+    "@prisma/client": "5.21.1",
+    "@prisma/extension-accelerate": "^1.2.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
-    "moment": "^2.30.1",
     "nodemon": "^3.1.7",
-    "pg": "^8.13.1",
-    "socket.io": "^4.8.1",
-    "uuid": "^11.0.2"
+    "pg": "^8.13.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
-    "@types/node": "^22.8.6",
-    "@types/pg": "^8.11.10",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/node": "^22.9.0",
+    "prisma": "^5.21.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
