--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "cSpell.words": ["argmax", "autoincrement", "Chatbubble", "jsonify"]
+  "cSpell.words": [
+    "argmax",
+    "autoincrement",
+    "Chatbubble",
+    "jsonify",
+    "oryzae",
+    "pycache",
+    "Toastify",
+    "venv"
+  ]
 }
