--- a/client/package.json
+++ b/client/package.json
@@ -16,11 +16,13 @@
     "dateformat": "^5.0.3",
     "dotenv": "^16.4.5",
     "javascript-time-ago": "^2.5.11",
+    "lucide-react": "^0.460.0",
     "nodemon": "^3.1.7",
     "postcss": "^8.4.49",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
