--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
     "argmax",
     "autoincrement",
     "Chatbubble",
+    "crossentropy",
+    "imagenet",
     "jsonify",
     "oryzae",
     "pycache",
