--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "postcss": "^8.4.49",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.5",
     "react-hot-toast": "^2.4.1",
