--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -5,3 +5,12 @@ scikit-learn==1.3.0
 matplotlib==3.7.2
 seaborn==0.12.2
 joblib==1.3.1
+flask
+tensorflow
+pillow
+numpy
+Flask
+tensorflow
+numpy
+opencv-python
+
