--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
@@ -17,6 +18,7 @@
     "dotenv": "^16.4.5",
     "javascript-time-ago": "^2.5.11",
     "lucide-react": "^0.460.0",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.7",
     "postcss": "^8.4.49",
     "prop-types": "^15.8.1",
@@ -34,6 +36,7 @@
     "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
+    "@types/node-cron": "^3.0.11",
     "@types/prop-types": "^15.7.13",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
